Fixed navbar dropdown alignment and added logo to navbar

--- a/app/navbar/styles.css
+++ b/app/navbar/styles.css
@@ -2,18 +2,17 @@
 .navbar {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     padding: 10px 20px;
     background-color: #f8f9fa;
     position: relative;
     height: 80px; 
     background-color: #40a824;
-    padding: 20px;
     color: white;
   }
   
   .logo {
-    width: 50px; /* Adjust size as needed */
+    height: 80px; /* Adjust size as needed */
   }
   
   .navbar-text {
@@ -21,6 +20,7 @@
     text-align: center;
     font-size: 2rem;
     font-weight: bold;
+    margin-left: -60px;
   }
   
   .dropdown {
@@ -42,6 +42,12 @@
     z-index: 1;
     margin-top: 5px;
     min-width: 160px;
+    margin-top: 5px;
+    min-width: 160px;
+    margin-top: 50px;
+    margin-right: 12px;
+    border-radius: 3px;
+    text-align: left;
   }
   
   .dropdown-content a {
@@ -68,7 +74,10 @@
 }
 
 .heart:hover {
+  /*
     background-color: #f1f1f1;
+    */
+    color: rgb(219, 240, 219);
   }
 
 .lines{
@@ -77,10 +86,21 @@
 }
 
 .lines:hover {
+  /*
     background-color: #f1f1f1;
+    */
+    color: rgb(219, 240, 219);
   }
 
-  .iconInDiv{
+
+.iconInDiv{
     height: 3rem;
     width: 3.5rem;
-  }
+}
+
+
+.icons{
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+}
